fix: ie11 dashboard wrap, form autocomplete, aantekeningen, correspondentie file not visible (#166)

--- a/public/scss/partials/_aantekening.scss
+++ b/public/scss/partials/_aantekening.scss
@@ -66,11 +66,11 @@
   
 }
 .aantekening {
-  width:65%;
+  width:70%;
   position: relative;
   box-sizing: border-box;
-  text-align: right;
-  padding: $padding/2 4rem;
+  text-align: left;
+  padding: $padding/2 5%;
   transition: transform .5s $transition-ease-default, opacity .5s $transition-ease-default, height .5s $transition-ease-default .2s;
   overflow: hidden;
   &.aantekening--bezig {
@@ -81,29 +81,42 @@
     height: 0!important;
     opacity: 0;
   }
+  .icon-prullenbak {
+    position: absolute;
+    right: 2px;
+    top: 3px;
+    text-decoration: none;
+  }
 }
 .aantekening-bericht {
-  padding: .2em 1em .3em 1em;
+  padding: 6px 8px;
+  text-align: left;
   margin: 0;
-  min-width: 60%;
+  width: calc(100% - 16px);
+  //min-width: 60%;
   display: inline-block;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 0 5px 0 rgba(#000, .1);
+  position: relative;
 }
 .aantekening-meta {
   margin: 0 0 .5em 0;
   line-height: 1.2;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-start;
+  text-align: left;
+  //display: flex;
+  //flex-direction: row-reverse;
+  //justify-content: flex-start;
   .admin &,
+  .gka_appbeheerder &,
   .gka & {
-    flex-direction: row;
+  text-align: right;
+    //flex-direction: row;
   }
   time {
     order: 1;
     .admin &,
+    .gka_appbeheerder &,
     .gka & {
       order: 2;
       padding-left: 0;
@@ -125,6 +138,7 @@
   strong {
     order: 1;
     .admin &,
+    .gka_appbeheerder &,
     .gka & {
       order: 2;
     }
@@ -134,9 +148,8 @@
   font-size: 1.2rem;
   color: rgba($textColor, .8);
   display: block;
-  &:before {
-    content: 'in ';
-  }
+  margin-bottom: 8px;
+  text-align: left;
   a {
     text-decoration: none;
   }
@@ -144,15 +157,23 @@
     text-decoration: underline;
   }
 }
-.gka,
-.admin {
+.aantekening-context__bottom {
+  margin-top: 8px;
+  margin-bottom: 0;
+}
+.aantekening.gka,
+.aantekening.gka_appbeheerder,
+.aantekening.admin {
   margin-left: auto;
-  text-align: left;
+  text-align: right;
   .aantekening-meta {
     time {
       left: auto;
       right: calc(100% - 3.5rem);;
     }
+  }
+  .aantekening-context {
+    text-align: right;
   }
   //&:before {
   //  content: '';
